--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>可以成为我的恋人吗？</title>
+    <title>Can I still be your Valentine…?🥺</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <img id="mainImage" src="images/heart.png" alt="爱心">
-        <h1 id="question">可以成为我的恋人吗？</h1>
+        <h1 id="question">Can I still be your Valentine…?🥺</h1>
         <div class="buttons">
-            <button id="yes">可以</button>
-            <button id="no">不要</button>
+            <button id="yes">YES!!I LOVE U 咪咪兔🥺💕</button>
+            <button id="no">FUCK OFF U BITCH.</button>
         </div>
     </div>
 
     <script src="script.js"></script>
 </body>
 </html>
+
