--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <img id="mainImage" src="images/heart.png" alt="爱心">
+        <img id="mainImage" src="images/求求你1.png" alt="爱心">
         <h1 id="question">Can I still be your Valentine…?🥺</h1>
         <div class="buttons">
             <button id="yes">YES!!I LOVE U 咪咪兔🥺💕</button>
@@ -20,4 +20,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
