--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
         <img id="mainImage" src="images/求求你1.png" alt="">
         <h1 id="question">Can I still be your Valentine…?🥺</h1>
         <div class="buttons">
-            <button id="yes">YES!!I LOVE U 咪咪兔🥺💕</button>
-            <button id="no">FUCK OFF U BITCH.</button>
+            <button id="yes">YES!! I LOVE U 咪咪兔🥺💕</button>
+            <button id="no">FUCK OFF U BITCH.🙄</button>
         </div>
     </div>
 
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
