--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
             <button id="no">FUCK OFF U BITCH.😒</button>
         </div>
     </div>
-
+    <audio id="bgm" loop preload="auto">
+        <source src="./爱你.mp3" type="audio/mpeg">
+    </audio>
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
