--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="container">
         <img id="mainImage" src="images/求求你1.png" alt="">
         <h1 id="question">Can I still be your Valentine…?🥺</h1>
         <div class="buttons">
@@ -22,6 +22,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
